--- a/CommunityMarket/app/src/main/res/layout/activity_detail_activty_three.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_detail_activty_three.xml
@@ -76,7 +76,10 @@
                     android:layout_marginTop="8dp"
                     android:fontFamily="@font/bangers"
                     android:text="1000 fcfa "
-                    android:textColor="@color/bg_screen1"
+                    android:background="@drawable/button_background"
+                    android:textColor="@color/blanc"
+                    android:padding="2dp"
+                    android:theme="@style/edit_theme"
                     android:textSize="18sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
@@ -98,6 +101,7 @@
                     android:id="@+id/detail_image_du_profil"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
+                    android:theme="@style/edit_theme"
                     android:layout_marginStart="32dp"
                     android:layout_marginTop="376dp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -136,9 +140,11 @@
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginBottom="50dp"
+                    android:fontFamily="@font/nunito_bold"
                     android:lineSpacingExtra="8dp"
                     android:textColor="@color/black"
                     android:textSize="@dimen/new_detail_desc_text_size"
+                    android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.444"
