--- a/CommunityMarket/app/src/main/res/layout/activity_detail_two.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_detail_two.xml
@@ -87,7 +87,9 @@
                     android:layout_marginTop="8dp"
                     android:fontFamily="@font/bangers"
                     android:text="1000 fcfa "
-                    android:textColor="@color/bg_screen1"
+                    android:background="@drawable/button_background"
+                    android:padding="2dp"
+                    android:textColor="@color/blanc"
                     android:textSize="@dimen/detail_text_size_two"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
@@ -108,6 +110,7 @@
                     android:id="@+id/detail_image_du_profil"
                     android:layout_width="@dimen/detail_image_height_width"
                     android:layout_height="@dimen/detail_image_height_width"
+                    android:theme="@style/edit_theme"
                     android:layout_marginStart="@dimen/profil_detail_start_text"
                     android:layout_marginTop="@dimen/detail_image_top"
                     app:layout_constraintStart_toStartOf="parent"
@@ -160,6 +163,7 @@
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginBottom="50dp"
+                    android:fontFamily="@font/righteous"
                     android:lineSpacingExtra="8dp"
                     android:textColor="@color/black"
                     android:textSize="@dimen/new_detail_desc_text_size"
