--- a/CommunityMarket/app/src/main/res/layout/activity_message.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_message.xml
@@ -48,7 +48,7 @@
             android:id="@+id/message_toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/blanc"
+           android:background="@drawable/toolbar_background"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -71,7 +71,6 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:fontFamily="@font/nunito_bold"
                     android:id="@+id/user_messag_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -79,10 +78,11 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginBottom="8dp"
-                    android:textColor="@color/black"
+                    android:fontFamily="@font/nunito_bold"
+                    android:textColor="@color/blanc"
                     android:textSize="18sp"
                     android:textStyle="bold"
-                    android:theme="@style/ToolbarTheme"
+                    android:theme="@style/ToolbarThemeTwo"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -130,8 +130,8 @@
         android:ems="10"
         android:hint="@string/message_activity_send_editext"
         android:inputType="textMultiLine|textPersonName"
-        android:padding="15dp"
-        android:fontFamily="@font/nunito_bold"
+        android:padding="10dp"
+        android:theme="@style/edit_theme"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
