--- a/CommunityMarket/app/src/main/res/layout/activity_parametre_porfil.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_parametre_porfil.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".profile.ParametrePorfilActivity"
     android:id="@+id/layout"
-    android:background="@color/blanc"
+    android:background="@color/black"
    >
 
     <ScrollView
@@ -28,29 +28,28 @@
                         android:layout_width="@dimen/parametre_actibity_image_w_n_h"
                         android:layout_height="@dimen/parametre_actibity_image_w_n_h"
                         android:layout_marginStart="8dp"
-                        android:layout_marginTop="60dp"
+                        android:layout_marginTop="16dp"
                         android:layout_marginEnd="8dp"
                         android:src="@drawable/boy"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.482"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
                     <EditText
                         android:id="@+id/param_nom"
+                        android:theme="@style/edit_theme"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="24dp"
                         android:layout_marginEnd="16dp"
                         android:alpha="0.5"
-                        android:background="@drawable/edit_text_background"
                         android:elevation="1dp"
                         android:ems="10"
-                        android:fontFamily="sans-serif-condensed"
+                        android:fontFamily="@font/righteous"
                         android:hint="@string/parametre_edit_nom"
                         android:inputType="textPersonName"
-                        android:padding="@dimen/login_padding_edit_text"
                         android:textColor="@color/blanc"
                         android:textColorHint="@color/blanc"
                         android:textSize="@dimen/parametre_text_size"
@@ -67,13 +66,12 @@
                         android:layout_marginTop="8dp"
                         android:layout_marginEnd="16dp"
                         android:alpha="0.5"
-                        android:background="@drawable/edit_text_background"
+                        android:theme="@style/edit_theme"
                         android:elevation="1dp"
                         android:ems="10"
-                        android:fontFamily="sans-serif-condensed"
+                        android:fontFamily="@font/righteous"
                         android:hint="@string/parametre_prenom"
                         android:inputType="textPersonName"
-                        android:padding="@dimen/login_padding_edit_text"
                         android:textColor="@color/blanc"
                         android:textColorHint="@color/blanc"
                         android:textSize="@dimen/parametre_text_size"
@@ -89,13 +87,12 @@
                         android:layout_marginTop="8dp"
                         android:layout_marginEnd="16dp"
                         android:alpha="0.5"
-                        android:background="@drawable/edit_text_background"
                         android:elevation="1dp"
                         android:ems="10"
-                        android:fontFamily="sans-serif-condensed"
+                        android:fontFamily="@font/righteous"
                         android:hint="phone (exple : +237 xxxxxxxxxx)"
                         android:inputType="number"
-                        android:padding="@dimen/login_padding_edit_text"
+                        android:theme="@style/edit_theme"
                         android:textColor="@color/blanc"
                         android:textColorHint="@color/blanc"
                         android:textSize="@dimen/parametre_text_size"
@@ -113,6 +110,8 @@
                         android:dropDownWidth="match_parent"
                         android:entries="@array/countries"
                         android:padding="15dp"
+                        android:theme="@style/edit_theme"
+                        android:background="@color/blanc"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/param_telephone" />
@@ -126,12 +125,12 @@
                         android:layout_marginTop="8dp"
                         android:layout_marginEnd="16dp"
                         android:alpha="0.5"
-                        android:padding="@dimen/login_padding_edit_text"
-                        android:background="@drawable/edit_text_background"
+                        android:fontFamily="@font/nunito_bold"
                         android:hint="quartier"
                         android:textColor="@color/blanc"
                         android:textColorHint="@color/blanc"
                         android:textSize="@dimen/parametre_text_size"
+                        android:theme="@style/edit_theme"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/param_residence" />
@@ -144,17 +143,16 @@
                         android:layout_marginTop="8dp"
                         android:layout_marginEnd="16dp"
                         android:alpha="0.5"
-                        android:background="@drawable/edit_text_background"
                         android:elevation="1dp"
                         android:ems="10"
-                        android:fontFamily="sans-serif-condensed"
+                        android:theme="@style/edit_theme"
+                        android:fontFamily="@font/righteous"
                         android:hint="@string/parametre_decription"
                         android:inputType="textMultiLine|textPersonName"
                         android:maxLength="250"
                         android:singleLine="false"
                         android:textColor="@color/blanc"
                         android:textColorHint="@color/blanc"
-                        android:padding="@dimen/login_padding_edit_text"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/edit_quartier" />
@@ -163,11 +161,12 @@
                         android:id="@+id/param_button"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginTop="8dp"
-                        android:layout_marginEnd="16dp"
+                        android:layout_marginStart="@dimen/new_profil_button"
+                        android:layout_marginTop="32dp"
+                        android:layout_marginEnd="@dimen/new_profil_button"
                         android:layout_marginBottom="8dp"
-                        android:background="@drawable/main_background"
+                        android:background="@drawable/button_background"
+                        android:fontFamily="@font/righteous"
                         android:text="@string/parametre_button"
                         android:textAllCaps="false"
                         android:textColor="@color/blanc"
@@ -205,6 +204,34 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="@+id/parametre_image" />
+
+                    <TextView
+                        android:id="@+id/textView8"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="32dp"
+                        android:layout_marginTop="32dp"
+                        android:fontFamily="@font/righteous"
+                        android:text="Parametre"
+                        android:textColor="@color/blanc"
+                        android:textSize="24sp"
+                        android:textStyle="bold"
+                        android:theme="@style/edit_theme"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/textView9"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        android:fontFamily="@font/nunito_bold"
+                        android:text="Dites en plus sur vous ..."
+                        android:textColor="@color/blanc"
+                        app:layout_constraintEnd_toEndOf="@+id/textView8"
+                        app:layout_constraintHorizontal_bias="0.0"
+                        app:layout_constraintStart_toStartOf="@+id/textView8"
+                        app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
                 </android.support.constraint.ConstraintLayout>
 
