--- a/CommunityMarket/app/src/main/res/layout/activity_search.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_search.xml
@@ -17,13 +17,14 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="8dp"
         android:alpha="0.5"
-        android:theme="@style/ToolbarThemeTwo"
         android:ems="10"
+        android:fontFamily="@font/righteous"
         android:hint="search ... "
         android:inputType="textPersonName"
         android:padding="@dimen/post_padding_edit_text"
         android:textColor="@color/blanc"
         android:textColorHint="@color/blanc"
+        android:theme="@style/edit_theme"
         app:layout_constraintEnd_toStartOf="@+id/search_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
@@ -59,10 +60,10 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
-        android:fontFamily="@font/nunito_bold"
+        android:fontFamily="@font/righteous"
         android:text="What do you want ? "
-        android:textSize="30sp"
         android:textColor="@color/blanc"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
