--- a/CommunityMarket/app/src/main/res/layout/activity_test.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_test.xml
@@ -80,7 +80,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/profil_detail_start_text"
                     android:layout_marginTop="8dp"
-                    android:background="@drawable/gradient_list"
+                    android:background="@drawable/button_background"
                     android:fontFamily="@font/bangers"
                     android:padding="1dp"
                     android:text="1000 fcfa "
@@ -96,7 +96,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/profil_detail_start_text"
-                    android:fontFamily="@font/fugaz_one"
+                    android:theme="@style/edit_theme"
                     android:text="yannick Houdini"
                     android:textColor="@color/blanc"
                     android:textSize="@dimen/detail_text_size_two"
