--- a/CommunityMarket/app/src/main/res/layout/bottom_sheet_layout.xml
+++ b/CommunityMarket/app/src/main/res/layout/bottom_sheet_layout.xml
@@ -30,10 +30,11 @@
         android:layout_marginStart="@dimen/new_detail_edit_start"
         android:ems="10"
         android:hint="ecrire un Commentaire"
-        android:theme="@style/progress_theme"
+        android:theme="@style/edit_theme"
         android:inputType="textMultiLine|textPersonName"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
+        android:fontFamily="@font/righteous"
         android:textSize="@dimen/new_detail_edit_text_size"
         app:layout_constraintBottom_toBottomOf="@+id/post_detail_user_image"
         app:layout_constraintStart_toEndOf="@+id/post_detail_user_image"
@@ -47,6 +48,7 @@
         android:background="@drawable/oval"
         android:text="add"
         android:textAllCaps="false"
+        android:fontFamily="@font/righteous"
         android:textColor="@color/blanc"
         android:textSize="@dimen/new_button_add_size"
         app:layout_constraintBottom_toBottomOf="@+id/post_detail_comment"
