--- a/CommunityMarket/app/src/main/res/layout/item_des_profil.xml
+++ b/CommunityMarket/app/src/main/res/layout/item_des_profil.xml
@@ -28,12 +28,12 @@
                 android:layout_marginTop="@dimen/item_text_top"
                 android:layout_marginEnd="18dp"
                 android:ellipsize="end"
-                android:fontFamily="sans-serif-condensed"
                 android:lines="1"
                 android:text="jvkur vjfnuv "
                 android:textColor="@color/black"
                 android:textSize="@dimen/post_item_desc"
                 android:textStyle="bold"
+                android:fontFamily="@font/nunito_bold"
                 app:layout_constraintEnd_toStartOf="@+id/profil_vendeur"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -41,8 +41,8 @@
 
             <ImageView
                 android:id="@+id/profil_vendeur"
-                android:layout_width="@dimen/post_item_image"
-                android:layout_height="@dimen/post_item_image"
+                android:layout_width="@dimen/commentaire_image"
+                android:layout_height="@dimen/commentaire_image"
                 android:layout_marginEnd="@dimen/item_vendeur_start"
                 android:layout_marginTop="@dimen/item_profil_margin_top"
                 android:visibility="visible"
@@ -58,7 +58,7 @@
                 android:layout_marginStart="@dimen/item_vendeur_start"
                 android:layout_marginTop="8dp"
                 android:ellipsize="end"
-                android:fontFamily="sans-serif-condensed"
+                android:fontFamily="@font/nunito_bold"
                 android:lines="1"
                 android:text="1000"
                 android:textColor="@color/orange"
