--- a/CommunityMarket/app/src/main/res/values-hdpi/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values-hdpi/dimens.xml
@@ -47,13 +47,13 @@
     <dimen name="vendeur_image_weight">80dp</dimen>
     <dimen name="vendeur_image_height">80dp</dimen>
     <!-- item layout principal-->
-    <dimen name="item_principal_image_dim_height_with">35dp</dimen>
+    <dimen name="item_principal_image_dim_height_with">20dp</dimen>
     <dimen name="item_principal_name">14sp</dimen>
-    <dimen name="item_principal_date">11sp</dimen>
+    <dimen name="item_principal_date">14sp</dimen>
     <dimen name="item_principal_desc">14sp</dimen>
     <dimen name="item_principal_prix">14sp</dimen>
     <!-- item layout nvx-->
-    <dimen name="nvx_item_nvx_image_dim_height_with">35dp</dimen>
+    <dimen name="nvx_item_nvx_image_dim_height_with">30dp</dimen>
     <dimen name="nvx_item_nvx_name">14sp</dimen>
     <dimen name="nvx_item_nvx_date">11sp</dimen>
     <dimen name="nvx_item_nvx_desc">14sp</dimen>
@@ -229,6 +229,22 @@
     <dimen name="splash_text_logo_name">20sp</dimen>
     <dimen name="message_activity_height_image">100dp</dimen>
     <dimen name="message_image">100dp</dimen>
+    //////////principal
+    <dimen name="principal_card_widht">305dp</dimen>
+    <dimen name="principal_container_height">150dp</dimen>
+    <dimen name="principal_desc_text_start">8dp</dimen>
+    <dimen name="principal_temps_top">2dp</dimen>
+    <dimen name="principal_top_title_prix">12dp</dimen>
+    <dimen name="priincipal_comment">4dp</dimen>
+    <dimen name="principal_width_image">140dp</dimen>
+    <dimen name="principal_image_height">150dp</dimen>
+    <dimen name="principal_round_image_top">8dp</dimen>
+    <dimen name="principal_image_round_start">6dp</dimen>
+    <dimen name="principal_item_desc_text">140dp</dimen>
+    <dimen name="principal_desc_height">60dp</dimen>
+    <dimen name="principal_prix_top_two">8dp</dimen>
+    <dimen name="principal_start">8dp</dimen>
+
 
 
 
