--- a/CommunityMarket/app/src/main/res/values-large/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values-large/dimens.xml
@@ -43,13 +43,13 @@
     <dimen name="vendeur_image_height">140dp</dimen>
     <dimen name="activity_vendeur_end_image_button">240dp</dimen>
     <!-- item layout principal-->
-    <dimen name="item_principal_image_dim_height_with">35dp</dimen>
-    <dimen name="item_principal_name">14sp</dimen>
+    <dimen name="item_principal_image_dim_height_with">40dp</dimen>
+    <dimen name="item_principal_name">24sp</dimen>
     <dimen name="item_principal_date">11sp</dimen>
-    <dimen name="item_principal_desc">14sp</dimen>
+    <dimen name="item_principal_desc">22sp</dimen>
     <dimen name="item_principal_prix">14sp</dimen>
     <!-- item layout nvx-->
-    <dimen name="nvx_item_nvx_image_dim_height_with">35dp</dimen>
+    <dimen name="nvx_item_nvx_image_dim_height_with">55dp</dimen>
     <dimen name="nvx_item_nvx_name">14sp</dimen>
     <dimen name="nvx_item_nvx_date">11sp</dimen>
     <dimen name="nvx_item_nvx_desc">14sp</dimen>
@@ -155,7 +155,7 @@
     <dimen name="new_detail_date_name_margin_start">110dp</dimen>
     <dimen name="new_detail_edit_text_size">24sp</dimen>
     //////////commentaire layout
-    <dimen name="commentaire_image">50dp</dimen>
+    <dimen name="commentaire_image">80dp</dimen>
     <dimen name="commentaire_name_user">24sp</dimen>
     <dimen name="commentaire_temps">16sp</dimen>
     <dimen name="commentaire_text">18sp</dimen>
@@ -230,7 +230,21 @@
     <dimen name="splash_text_logo_name">30sp</dimen>
     <dimen name="message_activity_height_image">210dp</dimen>
     <dimen name="message_image">200dp</dimen>
-
+    //////////principal
+    <dimen name="principal_card_widht">520dp</dimen>
+    <dimen name="principal_container_height">220dp</dimen>
+    <dimen name="principal_desc_text_start">8dp</dimen>
+    <dimen name="principal_temps_top">2dp</dimen>
+    <dimen name="principal_top_title_prix">12dp</dimen>
+    <dimen name="priincipal_comment">8dp</dimen>
+    <dimen name="principal_width_image">220dp</dimen>
+    <dimen name="principal_image_height">150dp</dimen>
+    <dimen name="principal_round_image_top">8dp</dimen>
+    <dimen name="principal_image_round_start">20dp</dimen>
+    <dimen name="principal_item_desc_text">250dp</dimen>
+    <dimen name="principal_desc_height">90dp</dimen>
+    <dimen name="principal_prix_top_two">4dp</dimen>
+    <dimen name="principal_start">24dp</dimen>
 
 
 </resources>
