--- a/CommunityMarket/app/src/main/res/values-mdpi/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values-mdpi/dimens.xml
@@ -43,7 +43,7 @@
     <!-- item layout principal-->
     <dimen name="item_principal_image_dim_height_with">35dp</dimen>
     <dimen name="item_principal_name">14sp</dimen>
-    <dimen name="item_principal_date">11sp</dimen>
+    <dimen name="item_principal_date">14sp</dimen>
     <dimen name="item_principal_desc">14sp</dimen>
     <dimen name="item_principal_prix">14sp</dimen>
     <!-- item layout nvx-->
@@ -249,6 +249,20 @@
     <dimen name="splash_text_logo_name">20sp</dimen>
     <dimen name="message_activity_height_image">100dp</dimen>
     <dimen name="message_image">100dp</dimen>
-
+    //////////principal
+    <dimen name="principal_card_widht">340dp</dimen>
+    <dimen name="principal_container_height">160dp</dimen>
+    <dimen name="principal_desc_text_start">8dp</dimen>
+    <dimen name="principal_temps_top">2dp</dimen>
+    <dimen name="principal_top_title_prix">12dp</dimen>
+    <dimen name="priincipal_comment">8dp</dimen>
+    <dimen name="principal_width_image">160dp</dimen>
+    <dimen name="principal_image_height">150dp</dimen>
+    <dimen name="principal_round_image_top">8dp</dimen>
+    <dimen name="principal_image_round_start">16dp</dimen>
+    <dimen name="principal_item_desc_text">150dp</dimen>
+    <dimen name="principal_desc_height">80dp</dimen>
+    <dimen name="principal_prix_top_two">4dp</dimen>
+    <dimen name="principal_start">8dp</dimen>
 
 </resources>
