--- a/CommunityMarket/app/src/main/res/values-xxxhdpi/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values-xxxhdpi/dimens.xml
@@ -46,7 +46,7 @@
     <dimen name="item_principal_image_dim_height_with">35dp</dimen>
     <dimen name="item_principal_name">14sp</dimen>
     <dimen name="item_principal_date">11sp</dimen>
-    <dimen name="item_principal_desc">14sp</dimen>
+    <dimen name="item_principal_desc">15sp</dimen>
     <dimen name="item_principal_prix">14sp</dimen>
     <!-- item layout nvx-->
     <dimen name="nvx_item_nvx_image_dim_height_with">35dp</dimen>
@@ -156,7 +156,7 @@
     <dimen name="new_detail_date_name_margin_start">50dp</dimen>
     <dimen name="new_detail_edit_text_size">16sp</dimen>
     //////////commentaire layout
-    <dimen name="commentaire_image">36dp</dimen>
+    <dimen name="commentaire_image">55dp</dimen>
     <dimen name="commentaire_name_user">16sp</dimen>
     <dimen name="commentaire_temps">12sp</dimen>
     <dimen name="commentaire_text">14sp</dimen>
@@ -231,5 +231,19 @@
 
     <dimen name="message_activity_height_image">100dp</dimen>
     <dimen name="message_image">100dp</dimen>
-
+    //////////principal
+    <dimen name="principal_card_widht">340dp</dimen>
+    <dimen name="principal_container_height">160dp</dimen>
+    <dimen name="principal_desc_text_start">8dp</dimen>
+    <dimen name="principal_temps_top">2dp</dimen>
+    <dimen name="principal_top_title_prix">12dp</dimen>
+    <dimen name="priincipal_comment">8dp</dimen>
+    <dimen name="principal_width_image">160dp</dimen>
+    <dimen name="principal_image_height">150dp</dimen>
+    <dimen name="principal_round_image_top">8dp</dimen>
+    <dimen name="principal_image_round_start">16dp</dimen>
+    <dimen name="principal_item_desc_text">150dp</dimen>
+    <dimen name="principal_desc_height">70dp</dimen>
+    <dimen name="principal_prix_top_two">2dp</dimen>
+    <dimen name="principal_start">8dp</dimen>
 </resources>
