--- a/CommunityMarket/app/src/main/res/layout/activity_apropos.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_apropos.xml
@@ -47,7 +47,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="@dimen/choice_Logo_margin_top"
         android:layout_marginEnd="8dp"
-        android:fontFamily="@font/caveat"
+        android:fontFamily="@font/righteous"
         android:text="Advert !!!"
         android:textAlignment="center"
         android:textColor="@color/blanc"
@@ -65,7 +65,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
-        android:fontFamily="sans-serif-condensed"
+        android:fontFamily="@font/righteous"
         android:text="@string/apropos_grand_titre"
         android:textAlignment="center"
         android:textColor="@color/blanc"
@@ -81,6 +81,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
+        android:fontFamily="@font/righteous"
         android:text="@string/a_propos_sous_titre"
         android:textAlignment="center"
         android:textColor="@color/blanc"
@@ -98,12 +99,13 @@
         android:layout_marginTop="72dp"
         android:layout_marginEnd="@dimen/paraameetre_button_margin_end"
         android:background="@drawable/button_background"
+        android:fontFamily="@font/nunito_bold"
+        android:padding="@dimen/param_button_padding"
         android:text="@string/a_propos_button"
         android:textAllCaps="false"
         android:textColor="@color/blanc"
         android:textSize="@dimen/button_param_text_size"
         android:textStyle="bold"
-        android:padding="@dimen/param_button_padding"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
