--- a/CommunityMarket/app/src/main/res/layout/activity_choice.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_choice.xml
@@ -59,12 +59,14 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="@dimen/choice_button_width"
         android:elevation="3dp"
+        android:background="@drawable/google_backgroung"
+        android:fontFamily="@font/nunito_bold"
+        android:text="continue avec google"
+        android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@color/blanc"
         android:textSize="@dimen/button_param_text_size"
-        android:background="@drawable/google_backgroung"
         android:visibility="visible"
-        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -88,9 +90,9 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_marginStart="@dimen/choice_button_width"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="@dimen/choice_button_width"
-        android:fontFamily="sans-serif-condensed"
+        android:fontFamily="@font/nunito_bold"
         android:paddingTop="15dp"
         android:paddingBottom="15dp"
         android:textAlignment="center"
@@ -110,7 +112,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="@dimen/choice_Logo_margin_top"
         android:layout_marginEnd="8dp"
-        android:fontFamily="@font/caveat"
+        android:fontFamily="@font/fredoka_one"
         android:text="O.Market "
         android:textColor="@color/blanc"
         android:textSize="@dimen/choice_Logo_text_size"
@@ -125,8 +127,9 @@
         android:layout_width="@dimen/text_choice_widht"
         android:layout_height="0dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
+        android:fontFamily="@font/nunito_bold"
         android:text="Open market est votre nouveaux partenaire en affaires , vendez partout aux cameroun,sans frais.Inscrivez vous ,c'est simple et rapide."
         android:textAlignment="center"
         android:textColor="@color/blanc"
