--- a/CommunityMarket/app/src/main/res/layout/activity_choice_search.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_choice_search.xml
@@ -54,7 +54,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
-                android:fontFamily="sans-serif-condensed"
+                android:fontFamily="@font/righteous"
                 android:text="utilisateur"
                 android:textColor="@color/blanc"
                 android:textSize="24sp"
@@ -114,7 +114,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
-                android:fontFamily="sans-serif-condensed"
+                android:fontFamily="@font/righteous"
                 android:text="un article "
                 android:textColor="@color/blanc"
                 android:textSize="24sp"
@@ -130,7 +130,7 @@
         android:id="@+id/toolbar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="0dp"
         android:background="@color/blanc"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
