--- a/CommunityMarket/app/src/main/res/layout/activity_detail_four.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_detail_four.xml
@@ -71,7 +71,9 @@
                     android:layout_marginTop="8dp"
                     android:fontFamily="@font/bangers"
                     android:text="1000 fcfa "
-                    android:textColor="@color/bg_screen1"
+                    android:background="@drawable/button_background"
+                    android:textColor="@color/blanc"
+                    android:padding="2dp"
                     android:textSize="18sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
@@ -94,6 +96,7 @@
                     android:layout_width="@dimen/detail_image_height_width"
                     android:layout_height="@dimen/detail_image_height_width"
                     android:layout_marginStart="@dimen/profil_detail_start_text"
+                    android:theme="@style/edit_theme"
                     android:layout_marginTop="@dimen/detail_image_top"
                     android:layout_marginBottom="90dp"
                     app:layout_constraintBottom_toTopOf="@+id/voir_les_commentaire_btn"
@@ -133,9 +136,11 @@
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginBottom="50dp"
+                    android:fontFamily="@font/righteous"
                     android:lineSpacingExtra="8dp"
                     android:textColor="@color/black"
                     android:textSize="@dimen/new_detail_desc_text_size"
+                    android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.444"
