--- a/CommunityMarket/app/src/main/res/layout/activity_post_final.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_post_final.xml
@@ -8,164 +8,164 @@
     tools:context=".postActivity.PostActivityFinal"
    android:background="@color/blanc">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/final_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/toolbar_background"
+        android:theme="@style/ToolbarThemeTwo"
+        app:layout_constraintTop_toTopOf="parent"
+        app:title="@string/post_info_sur_vente"
+        app:titleTextColor="@color/blanc" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/final_toolbar"
+        app:layout_constraintVertical_bias="0.125">
 
-        <LinearLayout
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/constrain"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content">
 
-            <android.support.constraint.ConstraintLayout
-                android:id="@+id/constrain"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
 
-                <android.support.v7.widget.Toolbar
-                    android:id="@+id/final_toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/blanc"
-                    android:theme="@style/ToolbarTheme_two"
-                    app:title="@string/post_info_sur_vente"
-                    app:titleTextColor="@color/black" />
+            <ImageView
+                android:id="@+id/imageProduit"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/app_bar_height"
+                android:scaleType="centerCrop"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/noir"
+                tools:ignore="MissingConstraints" />
 
-                <ImageView
-                    android:id="@+id/imageProduit"
-                    android:layout_width="0dp"
-                    android:layout_height="@dimen/app_bar_height"
-                    android:scaleType="centerCrop"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/final_toolbar"
-                    app:srcCompat="@drawable/noir" />
+            <EditText
+                android:id="@+id/post_product_name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="16dp"
+                android:alpha="0.5"
+                android:elevation="1dp"
+                android:ems="10"
+                android:fontFamily="@font/nunito_bold"
+                android:hint="@string/produc_name"
+                android:inputType="textPersonName"
+                android:maxLength="35"
+                android:textColor="@color/black"
 
-                <EditText
-                    android:id="@+id/post_product_name"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginEnd="16dp"
-                    android:alpha="0.5"
-                    android:elevation="1dp"
-                    android:theme="@style/progress_theme"
-                    android:ems="10"
-                    android:fontFamily="sans-serif-condensed"
-                    android:hint="@string/produc_name"
-                    android:inputType="textPersonName"
-                    android:maxLength="35"
+                android:textColorHint="@color/black"
+                android:textSize="@dimen/parametre_text_size"
+                android:theme="@style/edit_theme"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageProduit" />
 
-                    android:textColor="@color/black"
-                    android:textColorHint="@color/black"
-                    android:textSize="@dimen/parametre_text_size"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/imageProduit" />
+            <EditText
+                android:id="@+id/post_product_description"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:alpha="0.5"
+                android:elevation="1dp"
+                android:ems="10"
+                android:fontFamily="@font/nunito_bold"
+                android:hint="@string/post_description"
+                android:inputType="textMultiLine"
+                android:maxLength="400"
+                android:text=""
+                android:textColor="@color/black"
+                android:textColorHint="@color/black"
+                android:textSize="@dimen/parametre_text_size"
+                android:theme="@style/edit_theme"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/post_product_name" />
 
-                <EditText
-                    android:id="@+id/post_product_description"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="16dp"
-                    android:alpha="0.5"
-                    android:elevation="1dp"
-                    android:ems="10"
-                    android:theme="@style/progress_theme"
-                    android:fontFamily="sans-serif-condensed"
-                    android:hint="@string/post_description"
-                    android:inputType="textMultiLine"
-                    android:maxLength="400"
-                    android:text=""
-                    android:textColor="@color/black"
-                    android:textColorHint="@color/black"
-                    android:textSize="@dimen/parametre_text_size"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/post_product_name" />
+            <EditText
+                android:id="@+id/post_production_prix"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:alpha="0.5"
+                android:elevation="1dp"
+                android:ems="10"
+                android:fontFamily="@font/nunito_bold"
+                android:hint="@string/post_prix"
+                android:inputType="number"
+                android:textColor="@color/black"
+                android:textColorHint="@color/black"
+                android:textSize="@dimen/parametre_text_size"
+                android:theme="@style/edit_theme"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/post_product_description"
+                tools:ignore="LabelFor" />
 
-                <EditText
-                    android:id="@+id/post_production_prix"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="16dp"
-                    android:alpha="0.5"
-                    android:elevation="1dp"
-                    android:ems="10"
-                    android:theme="@style/progress_theme"
-                    android:fontFamily="sans-serif-condensed"
-                    android:hint="@string/post_prix"
-                    android:inputType="number"
-                    android:textColor="@color/black"
-                    android:textColorHint="@color/black"
-                    android:textSize="@dimen/parametre_text_size"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/post_product_description"
-                    tools:ignore="LabelFor" />
+            <Button
+                android:id="@+id/post_button"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:background="@drawable/second_button_background"
+                android:text="mettre en vendre"
+                android:textAllCaps="false"
+                android:textColor="@color/blanc"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                android:visibility="invisible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/post_production_prix"
+                app:layout_constraintVertical_bias="0.155" />
 
-                <Button
-                    android:id="@+id/post_button"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="16dp"
-                    android:background="@drawable/second_button_background"
-                    android:text="mettre en vendre"
-                    android:textAllCaps="false"
-                    android:textColor="@color/blanc"
-                    android:textSize="14sp"
-                    android:textStyle="bold"
-                    android:visibility="invisible"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/post_production_prix"
-                    app:layout_constraintVertical_bias="0.155" />
+            <ProgressBar
+                android:id="@+id/progressBar_post"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:visibility="invisible"
+                app:layout_constraintBottom_toBottomOf="@+id/imageProduit"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.498"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/imageProduit" />
 
-                <ProgressBar
-                    android:id="@+id/progressBar_post"
-                    style="?android:attr/progressBarStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    android:visibility="invisible"
-                    app:layout_constraintBottom_toBottomOf="@+id/imageProduit"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.498"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/imageProduit" />
-
-                <android.support.design.widget.FloatingActionButton
-                    android:id="@+id/post_new_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/post_actibity_final_float_button_top_margin"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginBottom="@dimen/post_padding_button_bottom"
-                    android:clickable="true"
-                    android:visibility="invisible"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/imageProduit"
-                    app:layout_constraintVertical_bias="0.361"
-                    app:srcCompat="@drawable/ic_ajouter" />
-            </android.support.constraint.ConstraintLayout>
-        </LinearLayout>
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/post_new_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/post_actibity_final_float_button_top_margin"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="@dimen/post_padding_button_bottom"
+                android:clickable="true"
+                android:visibility="invisible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/imageProduit"
+                app:layout_constraintVertical_bias="0.361"
+                app:srcCompat="@drawable/ic_ajouter" />
+        </android.support.constraint.ConstraintLayout>
     </ScrollView>
 
 
