--- a/CommunityMarket/app/src/main/res/layout/activity_publicity.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_publicity.xml
@@ -9,7 +9,8 @@
         android:id="@+id/entreprise_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:titleTextColor="@color/black"
+        android:background="@drawable/toolbar_background"
+        app:titleTextColor="@color/blanc"
         android:theme="@style/ToolbarThemeTwo">
 
     </android.support.v7.widget.Toolbar>
@@ -96,10 +97,11 @@
                     android:layout_marginStart="24dp"
                     android:layout_marginTop="@dimen/pub_desc_top"
                     android:layout_marginEnd="24dp"
-                    android:textStyle="bold"
+                    android:fontFamily="@font/righteous"
                     android:text=" le lorem Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500. "
-                    app:layout_constraintEnd_toEndOf="parent"
                     android:textSize="@dimen/pub_dec_text_size"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.498"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/publicity_entreprise_name" />
@@ -120,9 +122,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
-                    android:textStyle="bold"
+                    android:fontFamily="@font/righteous"
                     android:text="Douala"
                     android:textSize="@dimen/pub_dec_text_size"
+                    android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="@+id/imageView7"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -130,14 +133,14 @@
                     app:layout_constraintTop_toTopOf="@+id/imageView7" />
 
                 <TextView
-                    android:text="Lorem ipsum"
                     android:id="@+id/publicity_entreprise_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
-                    android:fontFamily="@font/pacifico"
+                    android:fontFamily="@font/righteous"
+                    android:text="Lorem ipsum"
                     android:textColor="@color/black"
                     android:textSize="@dimen/pub_title_text_size"
                     android:textStyle="bold"
@@ -160,9 +163,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:textStyle="bold"
+                    android:fontFamily="@font/righteous"
                     android:text="656209008"
                     android:textSize="@dimen/pub_dec_text_size"
+                    android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="@+id/imageView8"
                     app:layout_constraintStart_toEndOf="@+id/imageView8"
                     app:layout_constraintTop_toTopOf="@+id/imageView8" />
@@ -175,7 +179,8 @@
                     android:layout_marginTop="32dp"
                     android:layout_marginEnd="@dimen/pub_button_start_end"
                     android:layout_marginBottom="24dp"
-                    android:background="@drawable/main_background"
+                    android:background="@drawable/button_background"
+                    android:fontFamily="@font/righteous"
                     android:text="appeler"
                     android:textAllCaps="false"
                     android:textColor="@color/blanc"
