--- a/CommunityMarket/app/src/main/res/layout/activity_sell_user.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_sell_user.xml
@@ -26,12 +26,13 @@
         android:id="@+id/vendeur_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/blanc"
+        android:background="@drawable/toolbar_background"
         android:elevation="10dp"
+        android:theme="@style/ToolbarThemeTwo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:titleTextColor="@color/black"
+        app:titleTextColor="@color/blanc"
         />
 
     <android.support.v7.widget.RecyclerView
