--- a/CommunityMarket/app/src/main/res/layout/activity_user_general_presentation.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_user_general_presentation.xml
@@ -62,6 +62,7 @@
                         android:textColor="@color/orange"
                         android:textSize="@dimen/new_profil_name_text_size"
                         android:textStyle="bold"
+                        android:fontFamily="@font/righteous"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/generalImageProfilUser" />
@@ -105,6 +106,7 @@
                         android:textColor="@color/black"
                         android:textSize="@dimen/new_profil_text_size"
                         android:textStyle="bold"
+                        android:fontFamily="@font/righteous"
                         app:layout_constraintEnd_toEndOf="@+id/general_user_name"
                         app:layout_constraintStart_toStartOf="@+id/general_user_name"
                         app:layout_constraintTop_toBottomOf="@+id/general_user_name" />
@@ -139,7 +141,7 @@
                         android:layout_marginEnd="110dp"
                         android:text="vu le"
                         android:textColor="@color/black"
-
+                        android:fontFamily="@font/nunito_bold"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                         app:layout_constraintEnd_toStartOf="@+id/imageView4"
@@ -166,6 +168,8 @@
                         android:text="xxxx"
                         android:textSize="@dimen/new_profil_text_size"
                         android:textStyle="bold"
+                        android:fontFamily="@font/righteous"
+
                         app:layout_constraintEnd_toEndOf="@+id/imageView2"
                         app:layout_constraintStart_toStartOf="@+id/imageView2"
                         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
@@ -177,6 +181,8 @@
                         android:text="xxxx"
                         android:textSize="@dimen/new_profil_text_size"
                         android:textStyle="bold"
+                        android:fontFamily="@font/righteous"
+
                         app:layout_constraintBottom_toBottomOf="@+id/general_residence"
                         app:layout_constraintEnd_toEndOf="@+id/imageView3"
                         app:layout_constraintStart_toStartOf="@+id/imageView3"
@@ -191,6 +197,8 @@
                         android:text="xxxx"
                         android:textSize="@dimen/new_profil_text_size"
                         android:textStyle="bold"
+                        android:fontFamily="@font/righteous"
+
                         app:layout_constraintEnd_toEndOf="@+id/imageView4"
                         app:layout_constraintStart_toStartOf="@+id/imageView4"
                         app:layout_constraintTop_toBottomOf="@+id/imageView4" />
@@ -217,6 +225,8 @@
                         android:background="@drawable/button_background"
                         android:text="voir ventes "
                         android:textAllCaps="false"
+                        android:fontFamily="@font/righteous"
+
                         android:textColor="@color/blanc"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -233,6 +243,7 @@
                         android:background="@drawable/main_background"
                         android:text="contacter"
                         android:textAllCaps="false"
+                        android:fontFamily="@font/righteous"
                         android:textColor="@color/blanc"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
