--- a/CommunityMarket/app/src/main/res/layout/custum_pop_up.xml
+++ b/CommunityMarket/app/src/main/res/layout/custum_pop_up.xml
@@ -39,7 +39,8 @@
                 android:id="@+id/text_pop_up"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/nunito_bold"
                 android:text="Bienvenu sur Open Market ,avant de pouvoir poster, modifier les donnees de votre compte ."
                 android:textAlignment="center"
                 android:textColor="@color/blanc"
@@ -60,6 +61,7 @@
                 android:textAlignment="center"
                 android:textAllCaps="false"
                 android:textColor="@color/blanc"
+                android:fontFamily="@font/nunito_bold"
                 app:layout_constraintEnd_toStartOf="@+id/exit_button"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -81,7 +83,8 @@
                 android:layout_width="90dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="40dp"
-                android:background="@drawable/second_button_background"
+                android:fontFamily="@font/nunito_bold"
+                android:background="@drawable/button_background"
                 android:text="plus tard"
                 android:textAllCaps="false"
                 android:textColor="@color/blanc"
