--- a/CommunityMarket/app/src/main/res/layout/exit_pop_up.xml
+++ b/CommunityMarket/app/src/main/res/layout/exit_pop_up.xml
@@ -28,6 +28,7 @@
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
+                android:fontFamily="@font/nunito_bold"
                 android:text="ohhlala vous nous laissez deja?,je suis triste :( ."
                 android:textAlignment="center"
                 android:textColor="@color/blanc"
@@ -42,7 +43,7 @@
                 android:layout_width="90dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="40dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/main_background"
                 android:text="non "
@@ -79,17 +80,18 @@
                 app:layout_constraintTop_toTopOf="@+id/non_button" />
 
             <TextView
-                android:theme="@style/ToolbarTheme"
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="72dp"
+                android:layout_marginTop="32dp"
                 android:layout_marginEnd="8dp"
+                android:fontFamily="@font/nunito_bold"
                 android:text="Exit ?"
                 android:textColor="@color/blanc"
                 android:textSize="60sp"
                 android:textStyle="bold"
+                android:theme="@style/ToolbarTheme"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
