--- a/CommunityMarket/app/src/main/res/layout/fragment_home.xml
+++ b/CommunityMarket/app/src/main/res/layout/fragment_home.xml
@@ -137,10 +137,11 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
-                    android:fontFamily="@font/nunito_bold"
+                    android:fontFamily="@font/righteous"
                     android:text="@string/actu"
                     android:textColor="@color/blanc"
                     android:textSize="20sp"
+                    android:textAllCaps="false"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.03"
@@ -165,11 +166,10 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
-                    android:fontFamily="sans-serif-condensed"
                     android:textColor="@color/blanc"
                     android:textSize="20sp"
                     android:textStyle="bold"
-                    app:fontFamily="@font/nunito_bold"
+                    android:fontFamily="@font/righteous"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.031"
                     app:layout_constraintStart_toStartOf="parent"
