--- a/CommunityMarket/app/src/main/res/layout/item_commentaire.xml
+++ b/CommunityMarket/app/src/main/res/layout/item_commentaire.xml
@@ -17,6 +17,7 @@
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/chat_message_image_profil"
+                android:src="@drawable/boy"
                 android:layout_width="@dimen/commentaire_image"
                 android:layout_height="@dimen/commentaire_image"
                 android:layout_marginStart="@dimen/commentaire_image_margin_start"
@@ -57,7 +58,7 @@
                 android:layout_marginStart="@dimen/commentaire_name_start"
                 android:layout_marginTop="@dimen/commentaire_user_name_top"
                 android:layout_marginEnd="@dimen/commentaire_user_name_end"
-                android:fontFamily="@font/nunito_bold"
+                android:fontFamily="@font/righteous"
                 android:text="yannick"
                 android:textColor="@color/blanc"
                 android:textSize="@dimen/commentaire_name_user"
@@ -75,7 +76,7 @@
                 android:layout_marginEnd="@dimen/commentaire_text_end"
                 android:layout_marginBottom="@dimen/commentaire_text_bottom"
                 android:ellipsize="end"
-                android:fontFamily="@font/nunito_bold"
+                android:fontFamily="@font/righteous"
                 android:text="s'il te plait viens jaimerais te voir"
                 android:textColor="@color/blanc"
                 android:textSize="@dimen/commentaire_text"
@@ -105,7 +106,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/commentaire_text_temps_end"
-                android:fontFamily="@font/nunito_bold"
+               android:fontFamily="@font/righteous"
                 android:text="17 mai 2019"
                 android:textColor="@color/blanc"
                 android:textSize="@dimen/commentaire_temps"
