--- a/CommunityMarket/app/src/main/res/values/preloaded_fonts.xml
+++ b/CommunityMarket/app/src/main/res/values/preloaded_fonts.xml
@@ -10,12 +10,14 @@
         <item>@font/bangers</item>
         <item>@font/caveat</item>
         <item>@font/condiment</item>
+        <item>@font/fredoka_one</item>
         <item>@font/fugaz_one</item>
         <item>@font/nunito_bold</item>
         <item>@font/pacifico</item>
         <item>@font/playball</item>
         <item>@font/racing_sans_one</item>
         <item>@font/rationale</item>
+        <item>@font/righteous</item>
         <item>@font/yeseva_one</item>
         <item>@font/yesteryear</item>
     </array>
